intro page update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel='stylesheet' href='./node_modules/bootstrap/dist/css/bootstrap.css' />
   <style>
-    .github{
+    /* .github{
       float: right; 
       padding: 5px; 
       background-color: #8eccff; 
@@ -21,7 +21,7 @@
       background-color: #6591b6;
       color:black;
       text-decoration: none
-    }
+    } */
   </style>
 </head>
 
@@ -77,15 +77,17 @@
     <input type="text" id="textInput" placeholder="Document Link">
     <button class="btn btn-primary" id="joinBtn" onclick="send()" disabled>Join Document</button>
     <hr class='featurette-divider'>
+    <h3>Contributors</h3>
+    <hr class='featurette-divider'>
+    <h3>Papers</h3>
+    <hr class='featurette-divider'>
     <h3>Acknowledgements</h3>
     <p class='text-justify'>   
-      <div style="float:right;position: relative; bottom:50px;">
-        <p style="text-align: center; font-size: 30px;font-weight:500;">GitHub Links</p>
-        <a href="https://github.com/pomonahci/EyeWrite" class="github" style="margin-left: 15px;">EyeWrite</a> 
-        <a href="https://github.com/pomonahci/WebGazer" class="github">WebGazer</a>
-      </div>
-      Insert acknowledgements here and any additional disclosure needed/wanted.
     </p>
+    <hr class='featurette-divider'>
+    <h3>GitHub</h3>
+    <a href="https://github.com/pomonahci/EyeWrite" class="btn btn-primary" style="margin-right: 15px;">EyeWrite</a> 
+    <a href="https://github.com/pomonahci/WebGazer" class="btn btn-primary"> WebGazer</a>
     <br>
     <br>
     <br>
