calibration test error

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -122,7 +122,7 @@
     <div id="firepad"></div>
 
     <div id="video-streams">
-      <video id="my-camera"  width="175" autoplay="autoplay" muted="true" ></video>
+      <!-- <video id="my-camera"  width="175" autoplay="autoplay" muted="true" ></video> -->
     </div>
 
     <div id="colorpicker"></div>
@@ -220,7 +220,7 @@
       </script>
 
       <!-- Highlight Pattern Component -->
-      <div class="radio-buttons" style="display: flex; flex-direction: column">
+      <div class="radio-buttons" style="display: flex; flex-direction: column" visibility='hidden'>
         <p>Highlight Pattern</p>
         <div style="margin: auto">
           <select
