bug fixing on media call

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -277,11 +277,11 @@
             <div class="inline-toggle-container"> 
               <p>Audio</p>
               
-              <button id="aud" disabled=True>Off</button>
+              <button id="aud" disabled=True>Muted</button>
             </div>
             <div class="inline-toggle-container"> 
               <p>Video</p>
-              <button id="cam" disabled=True>Off</button>
+              <button id="cam" disabled=True>Hidden</button>
             </div>
           </div>
         </div>
@@ -386,5 +386,5 @@
   <script src='./scripts/visualization-control.js'></script>
   <!-- Voice Chat -->
   <!-- <script src="./scripts/voice-chat.js"></script> -->
-  <script src="./scripts/media-call.js"></script>
+  <script src="./scripts/media-call-v2.js"></script>
 </html>
