media cal updates

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -385,5 +385,5 @@
   <script src='./scripts/visualization-control.js'></script>
   <!-- Voice Chat -->
   <!-- <script src="./scripts/voice-chat.js"></script> -->
-  <script src="./scripts/media-call-v2.js"></script>
+  <script src="./scripts/media-call.js"></script>
 </html>
