finalized media call functionality

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -257,30 +257,32 @@
       <div>
         <div class="radio-buttons">
           <div>
-            <p>Voice/Video Chat</p>
+            <p style='text-align: center;'>Video Call</p>
+            <button id="videoCallJoin" style="margin: 0;position: absolute;top: 35%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%); background-color: #ffbf86; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;  font-size: 14px;">JOIN</button>
+
           </div>
           <div>
             <div class="inline-toggle-container">
               <div>
-                <div class="onoffswitch vvSwitch">
+                <!-- <div class="onoffswitch vvSwitch">
                   <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="voiceChatSwitch"
                     tabindex="0">
                   <label class="onoffswitch-label" for="voiceChatSwitch">
                     <span class="onoffswitch-inner"></span>
                     <span class="onoffswitch-switch"></span>
                   </label>
-                </div>
+                </div> -->
               </div>
-
             </div>
+            <br><br>
             <div class="inline-toggle-container"> 
               <p>Audio</p>
               
-              <button id="aud" disabled=True>Muted</button>
+              <button id="aud" disabled=True style="font-family: Trebuchet, Arial, sans-serif; font-weight: bold;  font-size: 14px;">Muted</button>
             </div>
             <div class="inline-toggle-container"> 
               <p>Video</p>
-              <button id="cam" disabled=True>Hidden</button>
+              <button id="cam" disabled=True style="font-family: Trebuchet, Arial, sans-serif; font-weight: bold;  font-size: 14px;">Hidden</button>
             </div>
           </div>
         </div>
