fixed UI issues

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -127,7 +127,7 @@
 
     <div id="colorpicker"></div>
 
-    <div id="heatmap" style="min-height: 100vh; min-width: 100vh"></div>
+    <div id="heatmap"></div>
 
     <div id="controlContainer">
       <div id="user-checkboxes-container"></div>
@@ -421,5 +421,6 @@
   <!-- Voice Chat -->
   <!-- <script src="./scripts/voice-chat.js"></script> -->
   <script src="./scripts/media-call.js"></script>
-  <script src="./scripts/heatmapVisualization.js"></script>
+  <!-- HeatMap visualization -->
+  <script src="./scripts/heatmapVisualization.js" defer></script>
 </html>
