added UI checkbox for visualizing heatmap

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -239,6 +239,7 @@
           >
             <!-- <option value="solid">Solid</option> -->
             <option value="gradient">Gradient</option>
+            <option value="heatmap">Heatmap</option>
           </select>
         </div>
       </div>
@@ -421,6 +422,4 @@
   <!-- Voice Chat -->
   <!-- <script src="./scripts/voice-chat.js"></script> -->
   <script src="./scripts/media-call.js"></script>
-  <!-- HeatMap visualization -->
-  <script src="./scripts/heatmapVisualization.js" defer></script>
 </html>
