dealt with html/css warnings

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -95,7 +95,7 @@
     <script src="https://cdn.firebase.com/libs/firechat/3.0.1/firechat.min.js"></script>
 
     <!-- Custom CSS -->
-    <style>
+    <!-- <style>
       #firechat-wrapper {
         /* height: 475px;
         width: 325px;
@@ -115,7 +115,7 @@
         left: 1575px;
         top: 425px; */
       }
-    </style>
+    </style> -->
   </head>
 
   <body onload="updateUI()">
