commented out customization UI due to bug

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -263,11 +263,21 @@
         <p class="hm-ui-options-text">Opacity: <span id="hm-opacity"></span></p>
         <input
           type="range"
-          min="0"
+          min="1"
           max="100"
           value="60"
           class="sentenceSlider"
           id="hm-opacity-slider"
+        />
+
+        <p class="hm-ui-options-text">Blur: <span id="hm-blur"></span></p>
+        <input
+          type="range"
+          min="0"
+          max="100"
+          value="85"
+          class="sentenceSlider"
+          id="hm-blur-slider"
         />
       </div>
 
