fixed font styling

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -316,8 +316,8 @@
       </div>
 
       <!-- Highlight Gradient Ratio Component -->
-      <div id="slider-container">
-        <p class="slider-text2">
+      <div id="slider-container" style="height: auto">
+        <p class="slider-text3">
           Gradient Ratio: <span id="numSentences2"></span>
         </p>
         <input
