prepare to pull into server code

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -248,7 +248,7 @@
       <div class="slider-container2" id="heatmap-params-container">
         <p class="slider-text3">Heatmap Customization</p>
 
-        <p class="hm-ui-options-text">
+        <!-- <p class="hm-ui-options-text">
           Radius Size: <span id="hm-radius"></span>
         </p>
         <input
@@ -278,7 +278,7 @@
           value="85"
           class="sentenceSlider"
           id="hm-blur-slider"
-        />
+        /> -->
 
         <div style="text-align: center">
           <p class="hm-ui-options-text">Data Removal</p>
@@ -291,7 +291,12 @@
         </div>
         <div class="text-center" style="margin: 10px 10px 0px 10px">
           <button
-            class="btn btn-secondary"
+            style="
+              background-color: #ffbf86;
+              font-family: Trebuchet, Arial, sans-serif;
+              font-weight: bold;
+              font-size: 14px;
+            "
             onclick="clearHeatmap()"
             type="button"
           >
