actually fixed layering issue now

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -248,7 +248,7 @@
       <div class="slider-container2" id="heatmap-params-container">
         <p class="slider-text3">Heatmap Customization</p>
 
-        <!-- <p class="hm-ui-options-text">
+        <p class="hm-ui-options-text">
           Radius Size: <span id="hm-radius"></span>
         </p>
         <input
@@ -260,6 +260,7 @@
           id="hm-radius-slider"
         />
 
+        <!--
         <p class="hm-ui-options-text">Opacity: <span id="hm-opacity"></span></p>
         <input
           type="range"
