added voice only wo video call

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -502,6 +502,6 @@
   <!-- UI Adjustments -->
   <script src="./scripts/ui-adjustments.js"></script>
   <!-- Voice Chat -->
-  <!-- <script src="./scripts/voice-chat.js"></script> -->
+  <!-- <script src="./scripts/voice-call.js"></script> -->
   <script src="./scripts/media-call.js"></script>
 </html>
