prepare pull to server

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -285,12 +285,12 @@
 
           <select id="heatmap-type-selector">
             <option value="capacity">Capacity</option>
-            <option value="temporal">Temporal</option>
+            <!-- <option value="temporal">Temporal</option> -->
             <option value="none">None</option>
           </select>
         </div>
 
-        <div id="hm-capacity-div" style="display: none">
+        <div id="hm-capacity-div" style="display: block">
           <p class="hm-ui-options-text">
             Capacity: <span id="hm-capacity"></span>
           </p>
@@ -304,7 +304,7 @@
           />
         </div>
 
-        <div id="hm-removal-rate-div" style="display: block">
+        <div id="hm-removal-rate-div" style="display: none">
           <p class="hm-ui-options-text">
             Removal Rate: <span id="hm-removal-rate"></span>
           </p>
