fix merge UI conflict

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -392,11 +392,11 @@
               JOIN
             </button>
           </div>
-          <div id="videoButton" class="inline-toggle-container">
+          <!-- <div id="videoButton" class="inline-toggle-container">
             <p>Video</p>
             <button id="cam" disabled=True
               style="font-family: Trebuchet, Arial, sans-serif; font-weight: bold;  font-size: 14px;">Hidden</button>
-          <div>
+          <div> -->
             <br /><br />
             <div class="inline-toggle-container">
               <p>Audio</p>
