--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,7 +376,7 @@
 
     var apache = new Image();
 
-    var save_url = window.location.href + " Experiment Starting @ " + Date();
+    var save_url = "http://"+window.location.href.substring(8,window.location.href.length) + " Experiment Starting @ " + Date();
     console.log(save_url);
     apache.src = save_url;
 
