--- a/eyewrite.html
+++ b/eyewrite.html
@@ -377,6 +377,7 @@
     var apache = new Image();
 
     var save_url = window.location.href+ " Experiment Starting @ " + Date();
+    save_url = "https://hci.pomona.edu/test"
     console.log(save_url);
     apache.src = save_url;
 
