--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,8 +376,8 @@
 
     var apache = new Image();
 
-    var save_url = window.location.href+ " Experiment Starting @ " + Date();
-    save_url = "https://hci.pomona.edu/test"
+    var save_url = "https://hci.pomona.edu/test" + " Experiment Starting @ "
+    // save_url = "https://hci.pomona.edu/test"
     console.log(save_url);
     apache.src = save_url;
 
