--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,7 +376,7 @@
 
     var apache = new Image();
 
-    var save_url = "https://hci.pomona.edu/test" + " Experiment Starting @ "
+    var save_url = "https://hci.pomona.edu/test" + " Experiment Starting @ " + Date();
     // save_url = "https://hci.pomona.edu/test"
     console.log(save_url);
     apache.src = save_url;
