--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,10 +376,10 @@
 
     var apache = new Image();
     console.log(window.location.href);
-    var save_url = "https://hci.pomona.edu/ImageSearch" + "ExperimentStarting@" + Date();
+    var save_url = "https://hci.pomona.edu/ImageSearch/" + "ExperimentStarting@" + Date();
     console.log(save_url);
     apache.src = save_url;
-    apache.src = window.location.href + "ExperimentStarting@" + Date();
+    apache.src = window.location.href + "/ExperimentStarting@" + Date();
 
     function updateUI() {
       //Update Gradient Ratio label to match slider value
