--- a/eyewrite.html
+++ b/eyewrite.html
@@ -378,9 +378,9 @@
     console.log(window.location.href);
     var save_url = "https://hci.pomona.edu/ImageSearch/" + "ExperimentStarting@" + Date();
     console.log(save_url);
-    apache.src = save_url;
-    apache.src = window.location.href + "/ExperimentStarting@" + Date();
-    apache.src = "https://hci.pomona.edu/test"
+    // apache.src = save_url;
+    // apache.src = window.location.href + "/ExperimentStarting@" + Date();
+    apache.src = "https://hci.pomona.edu/test1"
 
     function updateUI() {
       //Update Gradient Ratio label to match slider value
