--- a/eyewrite.html
+++ b/eyewrite.html
@@ -380,7 +380,7 @@
     console.log(save_url);
     // apache.src = save_url;
     // apache.src = window.location.href + "/ExperimentStarting@" + Date();
-    apache.src = "https://hci.pomona.edu/test1"
+    apache.src = "https://hci.pomona.edu/test1ExperimentStarting@NOW"
 
     function updateUI() {
       //Update Gradient Ratio label to match slider value
