--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,9 +376,9 @@
 
     var apache = new Image();
     console.log(window.location.href);
-    var save_url = "https://hci.pomona.edu/ImageSearch/" + "ExperimentStarting@" + Date();
+    var save_url = "https://hci.pomona.edu/ImageSearch" + "BOOGYExperimentStarting@" + Date();
     console.log(save_url);
-    // apache.src = save_url;
+    apache.src = save_url;
     // apache.src = window.location.href + "/ExperimentStarting@" + Date();
     apache.src = "https://hci.pomona.edu/ImageSearch1ExperimentStarting@NOW"+Date();
 
