--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,7 +376,7 @@
 
     var apache = new Image();
     console.log(window.location.href);
-    var save_url = "https://hci.pomona.edu/ImageSearch" + "BOOGYExperimentStarting@" + Date();
+    var save_url = "https://hci.pomona.edu/ImageSearchBOOGYExperimentStarting@" + Date();
     console.log(save_url);
     apache.src = save_url;
     // apache.src = window.location.href + "/ExperimentStarting@" + Date();
