--- a/eyewrite.html
+++ b/eyewrite.html
@@ -380,7 +380,7 @@
     console.log(save_url);
     apache.src = save_url;
     // apache.src = window.location.href + "/ExperimentStarting@" + Date();
-    apache.src = "https://hci.pomona.edu/ImageSearch1ExperimentStarting@NOW"+Date();
+    // apache.src = "https://hci.pomona.edu/ImageSearch1ExperimentStarting@NOW"+Date();
 
     function updateUI() {
       //Update Gradient Ratio label to match slider value
