--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,8 +376,10 @@
 
     var apache = new Image();
     console.log(window.location.href);
-    var save_url = "https://hci.pomona.edu/ImageSearchBOOGYExperimentStarting@" + Date();
+    // var save_url = "https://hci.pomona.edu/ImageSearchBOOGYExperimentStarting@" + Date();
+    var save_url = window.location.href+"BOOGYExperimentStarting@" + Date();
     console.log(save_url);
+
     apache.src = save_url;
     // apache.src = window.location.href + "/ExperimentStarting@" + Date();
     // apache.src = "https://hci.pomona.edu/ImageSearch1ExperimentStarting@NOW"+Date();
