--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,8 +376,9 @@
 
     var apache = new Image();
     console.log(window.location.href);
+    var ss = window.location.href;
     // var save_url = "https://hci.pomona.edu/ImageSearchBOOGYExperimentStarting@" + Date();
-    var save_url = window.location.href+"BOOGYExperimentStarting@" + Date();
+    var save_url = ss+"BOOGYExperimentStarting@" + Date();
     console.log(save_url);
 
     apache.src = save_url;
