--- a/eyewrite.html
+++ b/eyewrite.html
@@ -376,7 +376,7 @@
 
     var apache = new Image();
     console.log(window.location.href);
-    var ss = window.location.href;
+    var ss = String(window.location.href);
     // var save_url = "https://hci.pomona.edu/ImageSearchBOOGYExperimentStarting@" + Date();
     var save_url = ss+"BOOGYExperimentStarting@" + Date();
     console.log(save_url);
